# TreeSim

./: .gitignore  README.md  checkpoint  gen_test_data.py  run_nn.py  run_sim.py  score_5215.5_saved.npy  score_6000_saved.npy  train_nn.py  tree_sim.py  tree_sim_python.py  tree_trained.tflearn.data-00000-of-00001  tree_trained.tflearn.index
sim/: CMakeLists.txt  Makefile  Stratagies.hxx  TreeSim.cxx  TreeSim.hxx  Vec3i.cxx  Vec3i.hxx  build.sh  main.cxx  module.cpp  tree_render.py  tree_sim_fast.py  vec2.cxx  vec2.hxx
test_cross_compile/: Makefile  test.cxx
tflearn_logs/D379PL/: events.out.tfevents.1639509248.SIREN
tflearn_logs/JIEG0S/: events.out.tfevents.1637858067.SIREN
tflearn_logs/SO0OOV/: events.out.tfevents.1637858131.SIREN
tflearn_logs/ZDB83C/: events.out.tfevents.1639531809.SIREN
